--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d878d1">  <td>20/12/15 19:49:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin()[pri:0, instance:org.test.smplrn.swiggy.LoginTest@67205a84]">testLogin</td> 
-  <td>main@243745864</td>   <td></td> </tr>
+<tr bgcolor="66e5bd">  <td>20/12/16 17:44:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FoodSearchTest.findFood()[pri:0, instance:org.test.smplrn.swiggy.FoodSearchTest@1f554b06]">findFood</td> 
+  <td>main@1502635287</td>   <td></td> </tr>
 </table>
