--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="66e5bd">  <td>20/12/16 17:44:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FoodSearchTest.findFood()[pri:0, instance:org.test.smplrn.swiggy.FoodSearchTest@1f554b06]">findFood</td> 
-  <td>main@1502635287</td>   <td></td> </tr>
+<tr bgcolor="66e5bd">  <td>20/12/16 22:19:08</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.osNameCheck()[pri:0, instance:testcases.LoginTest@396f6598]">&gt;&gt;osNameCheck</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
+<tr bgcolor="66e5bd">  <td>20/12/16 22:19:50</td>   <td>42405</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.quitBrowsers()[pri:0, instance:testcases.LoginTest@396f6598]">&lt;&lt;quitBrowsers</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
+<tr bgcolor="66e5bd">  <td>20/12/16 22:19:10</td>   <td>1750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin(java.util.Hashtable)[pri:0, instance:testcases.LoginTest@396f6598]">testLogin</td> 
+  <td>main@738433734</td>   <td></td> </tr>
+<tr bgcolor="66e5bd">  <td>20/12/16 22:19:30</td>   <td>22409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin(java.util.Hashtable)[pri:0, instance:testcases.LoginTest@396f6598]">testLogin</td> 
+  <td>main@738433734</td>   <td></td> </tr>
+<tr bgcolor="66e5bd">  <td>20/12/16 22:19:41</td>   <td>32581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin(java.util.Hashtable)[pri:0, instance:testcases.LoginTest@396f6598]">testLogin</td> 
+  <td>main@738433734</td>   <td></td> </tr>
 </table>
