Updates as of 19th Dec

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\cajy7\AppData\Local\Temp\testng-eclipse--260780488\testng-customsuite.xml</span>
+                    <span>testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-Default_suite">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.SignUpTest" hash-for-method="testSignUp({ID=9757078221, browser=firefox, remote=n})">testSignUp({ID=9757078221, browser=firefox, remote=n})</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testrunner.TestRunner" hash-for-method="runScenario(&quot;User attempts to signup on Swiggy website&quot;, &quot;Optional[Account Signup]&quot;)">runScenario("User attempts to signup on Swiggy website", "Optional[Account Signup]")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testrunner.TestRunner" hash-for-method="runScenario(&quot;User attempts to signup&quot;, &quot;Optional[Account Signup]&quot;)">runScenario("User attempts to signup", "Optional[Account Signup]")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,15 +127,27 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testcases.SignUpTest</span>
+              <span class="class-name">testrunner.TestRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testSignUp({ID=9757078221, browser=firefox, remote=n})">
-                  </a> <!-- testSignUp({ID=9757078221, browser=firefox, remote=n}) -->
-                  <span class="method-name">testSignUp</span>
-                  <span class="parameters">({ID=9757078221, browser=firefox, remote=n})</span>
+                  <a name="runScenario(&quot;User attempts to signup on Swiggy website&quot;, &quot;Optional[Account Signup]&quot;)">
+                  </a> <!-- runScenario("User attempts to signup on Swiggy website", "Optional[Account Signup]") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("User attempts to signup on Swiggy website", "Optional[Account Signup]")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;User attempts to signup&quot;, &quot;Optional[Account Signup]&quot;)">
+                  </a> <!-- runScenario("User attempts to signup", "Optional[Account Signup]") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("User attempts to signup", "Optional[Account Signup]")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -138,7 +155,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\cajy7\AppData\Local\Temp\testng-eclipse--260780488\testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/yx/2mv5pn997759vd6wrdxjd4k00000gn/T/testng-eclipse-381928724/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +164,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testcases.SignUpTest&quot;/&gt;
+      &lt;class name=&quot;testrunner.TestRunner&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -171,6 +188,14 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">cucumber</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">runScenario</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -187,16 +212,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testSignUp')
-data.setCell(0, 2, 'testcases.SignUpTest')
-data.setCell(0, 3, 11658);
+data.setCell(0, 1, 'runScenario')
+data.setCell(0, 2, 'testrunner.TestRunner')
+data.setCell(0, 3, 18008);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'runScenario')
+data.setCell(1, 2, 'testrunner.TestRunner')
+data.setCell(1, 3, 12673);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 30 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -222,15 +251,23 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testcases.SignUpTest</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">osNameCheck</span>
+              <div class="chronological-class-name">testrunner.TestRunner</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setUpClass</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
+              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">testSignUp({ID=9757078221, browser=firefox, remote=n})</span>
-                <span class="method-start">775 ms</span>
+                <span class="method-name">runScenario("User attempts to signup", "Optional[Account Signup]")</span>
+                <span class="method-start">1731 ms</span>
               </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("User attempts to signup on Swiggy website", "Optional[Account Signup]")</span>
+                <span class="method-start">19750 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDownClass</span>
+                <span class="method-start">32465 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
