--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="66e5bd">  <td>20/12/17 03:43:11</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SignUpTest.osNameCheck()[pri:0, instance:testcases.SignUpTest@5a1c0542]">&gt;&gt;osNameCheck</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@161960012</td>   <td></td> </tr>
-<tr bgcolor="66e5bd">  <td>20/12/17 03:43:12</td>   <td>768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.testSignUp(java.util.Hashtable)[pri:0, instance:testcases.SignUpTest@5a1c0542]">testSignUp</td> 
-  <td>main@161960012</td>   <td></td> </tr>
+<tr bgcolor="8e6269">  <td>20/12/19 23:00:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunner.TestRunner@51e2adc7]">runScenario</td> 
+  <td>main@1160003871</td>   <td></td> </tr>
+<tr bgcolor="8e6269">  <td>20/12/19 23:00:41</td>   <td>18019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunner.TestRunner@51e2adc7]">runScenario</td> 
+  <td>main@1160003871</td>   <td></td> </tr>
+<tr bgcolor="8e6269">  <td>20/12/19 23:00:21</td>   <td>-1723</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:testrunner.TestRunner@51e2adc7]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1160003871</td>   <td></td> </tr>
+<tr bgcolor="8e6269">  <td>20/12/19 23:00:54</td>   <td>30736</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testrunner.TestRunner@51e2adc7]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1160003871</td>   <td></td> </tr>
 </table>
