--- a/extentReports/SignupPageTest.html
+++ b/extentReports/SignupPageTest.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-12-19 23:18:01</span>
+					<span class='suite-started-time'>2020-12-19 18:12:52</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 1s+308ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 1s+177ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 1s+308ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 1s+177ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-12-19 23:18:00</span> 
+							<span class='panel-lead suite-started-time'>2020-12-19 18:12:51</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-12-19 23:18:01</span> 
+							<span class='panel-lead suite-ended-time'>2020-12-19 18:12:52</span> 
 						</div> 
 					</div>
 				</div>
@@ -168,19 +168,19 @@
 								<tbody>
 										<tr>
 											<td>User Name</td>
-											<td>cajetanfernandes</td>
+											<td>cajy78live</td>
 										</tr>
 										<tr>
 											<td>OS</td>
-											<td>Mac OS X</td>
+											<td>Linux</td>
 										</tr>
 										<tr>
 											<td>Java Version</td>
-											<td>1.8.0_271</td>
+											<td>1.8.0_275</td>
 										</tr>
 										<tr>
 											<td>Host Name</td>
-											<td>Cajetans-MacBook-Pro.local</td>
+											<td>ip-172-31-78-209</td>
 										</tr>
 								</tbody>
 							</table>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='f6e039ed-a00d-4643-86c6-ed9f2cf8c86f'>
+										<li class='collection-item test displayed active pass ' extentid='be730a90-6e15-4326-8012-af30361fb709'>
 											<div class='test-head'>
 												<span class='test-name'>Swiggy Signup Page Test </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -245,9 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-12-19 23:18:00</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-12-19 23:18:01</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+203ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-12-19 18:12:51</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-12-19 18:12:52</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+131ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,7 +264,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>23:18:01</td>
+																	<td class='timestamp'>18:12:52</td>
 																	<td class='step-details'>Initial Signup Page test passed successfully</td>
 																</tr>
 														</tbody>
